--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,33 @@ Flask
 Flask-Login
 Flask-SQLAlchemy
 Flask-SocketIO
-gunicorn
+gunicornbidict==0.23.1
+blinker==1.8.2
+cachelib==0.13.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-OAuthlib==0.9.6
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+gunicorn==22.0.0
+h11==0.14.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+oauthlib==2.1.0
+packaging==24.1
+python-engineio==4.9.1
+python-socketio==5.11.3
+requests==2.32.3
+requests-oauthlib==1.1.0
+simple-websocket==1.0.0
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+urllib3==2.2.2
+Werkzeug==3.0.3
+wsproto==1.2.0
