--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 bidict==0.23.1
 blinker==1.8.2
 cachelib==0.13.0
+cachetools==5.3.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -9,22 +10,81 @@ Flask-Login==0.6.3
 Flask-OAuthlib==0.9.6
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
+google-api-core==2.19.1
+google-api-python-client==2.135.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.2
 greenlet==3.0.3
 gunicorn==22.0.0
 h11==0.14.0
+httplib2==0.22.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 oauthlib==2.1.0
 packaging==24.1
+proto-plus==1.24.0
+protobuf==5.27.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyparsing==3.1.2
 python-engineio==4.9.1
 python-socketio==5.11.3
 requests==2.32.3
 requests-oauthlib==1.1.0
+rsa==4.9
 simple-websocket==1.0.0
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.2
-Werkzeug==1.0.1
+Werkzeug==3.0.3
+wsproto==1.2.0
+bidict==0.23.1
+blinker==1.8.2
+cachelib==0.13.0
+cachetools==5.3.3
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-OAuthlib==0.9.6
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.1.1
+google-api-core==2.19.1
+google-api-python-client==2.135.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.2
+greenlet==3.0.3
+gunicorn==22.0.0
+h11==0.14.0
+httplib2==0.22.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+oauthlib==2.1.0
+packaging==24.1
+proto-plus==1.24.0
+protobuf==5.27.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyparsing==3.1.2
+python-engineio==4.9.1
+python-socketio==5.11.3
+requests==2.32.3
+requests-oauthlib==1.1.0
+rsa==4.9
+simple-websocket==1.0.0
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.2
+Werkzeug==3.0.3
 wsproto==1.2.0
